
Version (SVN)
-------------

All:   Fixed bug CASTOR-1397 using contribution from Henk van Voorthujsen [voorth@xs4all.nl]
       Fixed compiler warnings: 212 unnecessary else clauses.
       Details: http://jira.codehaus.org/browse/CASTOR-1397
       (Ralf - 20060425)

JDO:   Fixed bug CASTOR-1407 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Use ClassMolder.getLockEngine() instead of passing around LockEngine everywhere.
       Details: http://jira.codehaus.org/browse/CASTOR-1407
       (Ralf - 20060422)

JDO:   Fixed bug CASTOR-1402 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Improved exception reporting for various JDO-related exceptions.
       Details: http://jira.codehaus.org/browse/CASTOR-1402
       (Werner - 20060422)
       
JDO:   Fixed bug CASTOR-1403 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed documentation for 'sortedset' collection type in the JDO mapping section.
       Details: http://jira.codehaus.org/browse/CASTOR-1403
       (Werner - 20060422)

All:   Fixed bug CASTOR-1380 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Migrated Castor repository from CVS to SVN.
       Details: http://jira.codehaus.org/browse/CASTOR-1380
       (Ralf - 20060416)

All:   Fixed bug CASTOR-1401 using contribution from Henk van Voorthujsen [voorth@xs4all.nl]
       Added project specific settings for use with Eclipse.
       Details: http://jira.codehaus.org/browse/CASTOR-1401
       (Ralf - 20060414)

All:   Fixed bug CASTOR-1395 using contribution from Henk van Voorthujsen [voorth@xs4all.nl]
       Fixed compiler warnings: 268 unused imports.
       Details: http://jira.codehaus.org/browse/CASTOR-1395
       (Ralf - 20060414)

JDO:   Fixed bug CASTOR-1388 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Refactor ClassMolder.update() to complete transfer to strategy pattern.