@@ -32,7 +32,7 @@
                 work and move it over to SVN. Be aware that we will switch off CVS soon.
 
                 For details about SVN access please have a look at: 
-                <a href="cvs.html">SVN/JIRA</a>.
+                <a href="scm.html">SVN/JIRA</a>.
             </summary>
         </news>
         <news id="39">
